--- a/styles/allbed/allbed.module.scss
+++ b/styles/allbed/allbed.module.scss
@@ -369,3 +369,135 @@
     background-color: #0d6efd;
     border-color: #0d6efd;
 }
+
+
+// -----------------------------------------------------------------
+
+.tabs {
+  width: 100%;
+}
+.productname {
+  p {
+    padding-top: 10px;
+  padding-left: 10px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  line-clamp: 2;
+  -webkit-box-orient: vertical;
+  }
+}
+.price {
+  font-size: 20px;
+  font-weight: 700;
+  font-family: sans-serif;
+  color: #008849;
+  padding-left: 10px;
+}
+.box8 {
+  border: 1px solid rgba(128, 128, 128, 0.3882352941);
+  width: 260px;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+  height: 438px;
+}
+.productsimages {
+  background-color: #f5f5f5;
+  margin-top: 30px;
+  padding-top: 45px;
+  h4{
+    text-align: center;
+  }
+  h2{
+    text-align: center;
+  }
+ 
+ 
+}
+.viewAllProduct {
+  color: #ffffff;
+  background-color: rgb(38, 40, 132);
+  border-radius: 6px;
+
+  font-size: 15px;
+  padding: 12px 20px;
+  font-weight: 400;
+  letter-spacing: 0.5px;
+  margin-top: 37px;
+  border: none;
+}
+.viewAllProductTab {
+  margin: 0px auto;
+  width: fit-content;
+  display: block;
+}
+
+.sofabutton8{
+  color: rgb(255, 255, 255);
+  background-color: black;
+  padding: 7px 31px 5px 26px;
+  font-size: 14px;
+  border: 0;
+  display: block;
+  max-width: 300px;
+  border-radius: 30px;
+  margin: 0 auto;
+  position: relative;
+  top: 10px;
+}
+.sofabutton9 {
+  color: rgb(255, 255, 255);
+  background-color: black;
+  padding: 7px 31px 5px 26px;
+  font-size: 14px;
+  border: 0;
+  display: block;
+  max-width: 300px;
+  border-radius: 30px;
+  margin: 0 auto;
+  position: relative;
+  top: 33px;
+}
+
+.perfect{
+  border: 1px solid;
+  border-color: gray;
+
+} 
+.perfect8{
+  text-align: center;
+  margin-top: 80px;
+  border: 1px solid;
+  padding: 14px 0 14px;
+  border-color: gray;
+ 
+}
+
+.refresh{
+  text-align: center;
+}
+
+.box9{
+  border: 1px solid rgba(128, 128, 128, 0.3882352941);
+  width: 260px;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+  height: 319px;
+}
+
+.season{
+  text-align: center;
+}
+
+.productname8{
+
+  padding-left: 10px;
+  padding-right: 10px;
+  align-items: center;
+  font-size: 14px;
+}
+
+.productsimages9{
+  background-color: #f5f5f5;
+}
