--- a/styles/footer/footer.module.scss
+++ b/styles/footer/footer.module.scss
@@ -58,3 +58,16 @@ ul.align-items-left {
       }
     }
 }
+.footerimage {
+  img {
+    width: 325px;
+  }
+}
+.footerimage2 {
+  max-width: 0;
+  margin-left: 85px;
+  margin-top: 25px;
+  img {
+    width: 155px;
+  }
+}
