--- a/styles/HomePage/home.module.scss
+++ b/styles/HomePage/home.module.scss
@@ -517,6 +517,7 @@ section.qualityproducts {
 .pride {
   background-color: whitesmoke;
   text-align: center;
+  padding-top: 45px;
   h2 {
     font-weight: 800px;
   }
