--- a/styles/HomePage/home.module.scss
+++ b/styles/HomePage/home.module.scss
@@ -306,6 +306,16 @@ hr.banner_icons {
     width: 260px;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
+    img {
+      width: 300px;
+  }
+  .trustpilot {
+    img {
+      
+    width: 175px;
+
+    }
+  }
   }
   .productsimages {
     margin-top: 30px;
@@ -369,6 +379,9 @@ section.qualityproducts {
   p {
     color: #000000;
     font-size: 20px;
+  }
+  strong {
+    padding-right: 6px;
   }
   .perfectbed {
     text-align: center;
