--- a/styles/footer/footer.module.scss
+++ b/styles/footer/footer.module.scss
@@ -66,8 +66,9 @@ ul.align-items-left {
 .footerimage2 {
   max-width: 0;
   margin-left: 85px;
-  margin-top: 25px;
+  margin-top: 35px;
   img {
     width: 155px;
+    padding-top: 12px;
   }
 }
