--- a/styles/NewProductPage.module.scss
+++ b/styles/NewProductPage.module.scss
@@ -1,4 +1,3 @@
-
 .imagestyle {
     width: 100%;
     object-fit: cover;
@@ -7,7 +6,7 @@
 .container {
     display: flex;
     flex-direction: column;
-   
+
     position: absolute;
     right: 100px;
     top: 50%;
@@ -16,22 +15,33 @@
     // backdrop-filter: blur(15px);
     border-radius: 6px;
     gap: 10px; // 1rem = 16px
-  
+
 }
 
 
-.item1{
+
+.imageContainer{
+position: relative;
+.image{
+    max-width: 100%;
+    min-height: 700px;
+    object-fit: cover;
+}
+}
+
+.item1 {
     display: flex;
     height: 400px;
     width: 435px;
     background: #fff;
-  overflow: hidden;
+    overflow: hidden;
 }
 
-.item2{
+.item2 {
     background: #fff;
     padding-bottom: 9px;
 }
+
 .left {
     flex: .3;
     background: #0e3f70;
@@ -212,3 +222,96 @@
     align-items: center;
     gap: 20px;
 }
+
+// 28/6
+.banner{
+    
+  
+
+    .bannerimage{
+        width: 100% !important;
+        border: 2px solid #707070;
+    }
+}
+.containers{
+    // max-width: 100%;
+    width: 100%;
+    padding-left: 44px;
+    padding-right: 44px;
+}
+.productsimages {
+    background-color: #f5f5f5;
+    .mainh2 {
+     
+      padding: 12px 0px;
+      font-weight: 700;
+    }
+  
+    .productname {
+      font-size: 16px;
+      color: #5A5757;
+      font-weight: 700;
+      font-family: sans-serif;
+      padding-top: 10px;
+      padding-left: 10px;
+      font-style: normal;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-line-clamp: 2; /* number of lines to show */
+      -webkit-box-orient: vertical;
+      line-height: 20px;
+      text-align: center;
+     
+    }
+    .price {
+      font-size: 1rem;
+      font-weight: 700;
+      font-family: sans-serif;
+      color: #000;
+      padding-left: 10px;
+      font-style: normal;
+    }
+    .price del {
+      opacity: 0.51;
+      font-size: 16px;
+      padding-left: 8px;
+    }
+    .price span {
+      color: #4ecb4e;
+      font-weight: 500;
+      padding-left: 4px;
+    }
+    .box1 {
+      padding-bottom: 70px;
+      width: 260px;
+      border-bottom-left-radius: 4px;
+      border-bottom-right-radius: 4px;
+      img {
+        width: 250px;
+    }
+    .trustpilot {
+      img {
+        
+      width: 175px;
+  
+      }
+    }
+    }
+    .productsimages {
+      margin-top: 30px;
+    }
+  }
+  .trustpilot {
+    img {
+      width: 160px;
+      position: relative;
+      left: 12px;
+      padding-bottom: 12px;
+      padding-top: 8px;
+    }
+  }
+  .productcart{
+    display: flex;
+    gap: 10px;
+  }
