--- a/styles/NewProductPage.module.scss
+++ b/styles/NewProductPage.module.scss
@@ -23,6 +23,7 @@
     max-width: 100%;
     min-height: 700px;
     object-fit: cover;
+    width: 100%;
   }
 }
 
@@ -97,12 +98,11 @@
 
 .texture {
   display: flex;
-
+  gap: 5px;
   flex-wrap: wrap;
   list-style: none;
   font-size: 10px;
-
-  padding-left: 5px;
+  padding: 10px !important;
 }
 
 .texture li {
@@ -110,8 +110,9 @@
   text-align: center;
   opacity: 1;
   cursor: pointer;
-  width: calc(100% / 3);
+  width: calc(100% / 3 - 10px);
   padding: 10px;
+  border-width: 1px !important;
 }
 
 .imagestyle2 {
@@ -128,7 +129,20 @@
 
 .color {
   overflow-y: scroll;
-  height: 200px;
+  height: 325px;
+  &::-webkit-scrollbar-track {
+    background-color: #f5f5f5;
+  }
+
+  &::-webkit-scrollbar {
+    width: 8px;
+    background-color: #f5f5f5;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #000000;
+    border: 1px solid #555555;
+  }
 }
 
 .texture2 li {
@@ -145,12 +159,12 @@
 }
 
 .texture2 li:hover {
-  border: 1px solid #0e3f70 !important;
+  border: 1px solid #0e3f70;
 }
 
-.texture li:hover {
-  border: 1px solid #0e3f70 !important;
-}
+// .texture li:hover {
+//   border: 1px solid #0e3f70;
+// }
 
 .summary {
   h3 {
@@ -294,4 +308,11 @@
 .productcart {
   display: flex;
   gap: 10px;
+}
+.productName {
+  font-size: 1.3rem;
+  max-width: 435px;
+  color: #233645;
+  font-weight: 700;
+  line-height: 1.4;
 }
